--- a/hacker-monster/hm-rest/src/main/resources/static/css/style.css
+++ b/hacker-monster/hm-rest/src/main/resources/static/css/style.css
@@ -95,21 +95,22 @@ html, body{
 .right-side .home{
     color: white;
 }
-.right-side .home .header{
+.right-side .header{
     height: 50px;
     padding-top: 10px;
+    color: white;
 }
-.right-side .home .header i{
+.right-side .header i{
     position: absolute;
     color: gray;
     margin-top: 7px;
     margin-left: 2px;
 }
-.right-side .home .header .col-md-4 span{
+.right-side .header .col-md-4 span{
     font-size: 20px;
     font-family: 'Saira', sans-serif;
 }
-.right-side .home .header input[type=text]{
+.right-side .header input[type=text]{
     border: none;
     height: 30px;
     border-radius: 5px;
@@ -117,6 +118,72 @@ html, body{
     width: 100%;
     color: gray;
 }
+.right-side .home .content{
+    font-family: 'Saira', sans-serif;
+}
+.right-side .home .content ul{
+    list-style-type: none;
+}
+.right-side .home .content ul li{
+    width: 100%;
+    height: 73px;
+    padding-top: 15px;
+    border-bottom: 1px solid;
+}
+.right-side .home .content ul li:hover{
+    position:relative;
+    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+.right-side .home .content ul .col-md-1{
+    padding: 0px;
+    padding-top: 5px;
+}
+.right-side .home .content ul .col-md-1 img{
+    float: right;
+}
+.right-side .home .content ul a{
+    color: white;
+    font-size: 16px;
+    text-decoration: none;
+}
+.right-side .home .content ul span{
+    font-size: 12px;
+    color: #BBBBBB;
+}
+.right-side .show-more{
+    text-align: center;
+
+}
+.article-content{
+    border-radius: 5px;
+    padding: 5px;
+    color: white;
+    font-family: 'Saira', sans-serif;
+}
+.article-content .title{
+    width: 100%;
+    height: 75px;
+}
+.article-content .title .col-md-1{
+    padding: 0px;
+    padding-top: 10px;
+    width: 30px;
+}
+.article-content .title .col-md-1 img{
+    float: right;
+}
+.article-content .title .col-md-10{
+    border-bottom: 1px solid white;
+}
+.article-content .title label{
+    font-size: 20px;
+}
+.article-content .title span{
+    color: #BBBBBB;
+}
+/* FOOTER */
 .footer{
     background-color: yellow;
 }
