--- a/hacker-monster/hm-rest/src/main/resources/static/css/style.css
+++ b/hacker-monster/hm-rest/src/main/resources/static/css/style.css
@@ -1,200 +1,683 @@
 /* font-family: 'Montserrat', sans-serif;
-    font-family: 'Roboto Slab', serif;
-    font-family: 'Roboto Mono', monospace;
-    font-family: 'Nunito', sans-serif;
-    font-family: 'Noto Serif', serif;
-    font-family: 'Lobster', cursive;
-    font-family: 'Dancing Script', cursive;
-    font-family: 'Patrick Hand', cursive;
-    font-family: 'Itim', cursive;
-    font-family: 'Saira', sans-serif; */
-html, body{
-    height: 100%;
-}
-.content, .boundary{
-    height: 100%;
-}
-.boundary .col-md-8{
-    height: 100%;
-}
-.left-side{
-    background-color: #51BDC0;
-    color: white;
-    padding: 0px;
-    height: 100%;
-    width: 200px;
-}
-.left-side .personal{
-    background-color: #444444;
-    height: 180px;
-    padding-top: 20px;
-    box-shadow: 0 8px 6px -6px black;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-.left-side .personal .name{    
-    height: 25px;
-}
-.left-side .personal .name .col-md-10{
-    font-family: 'Dancing Script', cursive;
-    font-size: 22px;
-    margin-top: -10px;
-}
-.left-side .personal .name .col-md-2 a{
-    float: right;
-}
-.left-side .personal a{
-    float: right;
-    color: white;
-}
-.left-side .personal a:hover{
-    color: #AAAAAA;
-}
-.left-side .personal .personal-infor{
-    height: 100px;
-    padding-top: 22px;
+font-family: 'Roboto Slab', serif;
+font-family: 'Roboto Mono', monospace;
+font-family: 'Nunito', sans-serif;
+font-family: 'Noto Serif', serif;
+font-family: 'Lobster', cursive;
+font-family: 'Dancing Script', cursive;
+font-family: 'Patrick Hand', cursive;
+font-family: 'Itim', cursive;
+font-family: 'Saira', sans-serif; */
+body{
+    margin: 0;
+    padding: 0;
     font-family: 'Saira', sans-serif;
 }
-.left-side .personal .personal-infor img{
-    height: 40px;
-    width: 40px;
+.row{
+    margin-left: 0px;
+    margin-right: 0px;
 }
-.left-side .personal .setting{
-    height: 20px;
+a{
+    text-decoration: none !important;
+    color: #999999;
 }
-.left-side .navigation{
-    margin-top: 50px;
-    font-family: 'Saira', sans-serif;
+a:hover{
+    color: blue;
 }
-.left-side .navigation ul {
+input:focus{
+    outline: none;
+}
+.alert-danger{
+    margin-top: 10px;
+    text-align: left;
+}
+/*NAVIGATION*/
+.navigation{
+    background-color: #FFFFFF;
+    height: 70px;
+    padding-left: 100px;
+    line-height: 70px;
+    color: #999999;
+}
+.navigation .logo{
+    font-size: 30px;
+    border-right: 1px solid gray;
+    padding-right: 10px;
+    margin-right: 10px;
+}
+.navigation .col-md-8{
+    text-align: right;
+    padding-right: 100px;
+}
+.navigation .col-md-8 .user-profile{
+    float: right
+}
+/*HEADER*/
+.header{
+    background-image: url('../assets/banner.png');
+    height: 320px;
+    background-position: center right;
+}
+/*SEARCH*/
+.search{
+    background-color: #03a9f4;
+    height: 70px;
+    padding-left: 100px;
+}
+.search ul {
     list-style-type: none;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-.left-side .navigation ul li{
-    height: 50px;
-    border-bottom: 1px solid;
-    padding-top: 15px;
-}
-.left-side .navigation ul li a{
-    color: white;
-    text-decoration: none;
-    
-}
-.left-side .navigation ul li:hover{
-    background-color: #00CCCC;
-}
-.left-side .navigation .sub-topic{
-    box-shadow: 0 8px 6px -6px black;
-}
-/* RIGHT SIDE CSS */
-.right-side{
-    background-color: #60838C;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
     height: 100%;
 }
-.right-side .home{
+.search li {
+    float: left;
+}
+.search li a {
+    display: block;
     color: white;
-}
-.right-side .header{
-    height: 50px;
-    padding-top: 10px;
-    color: white;
-}
-.right-side .header i{
-    position: absolute;
-    color: gray;
-    margin-top: 7px;
-    margin-left: 2px;
-}
-.right-side .header .col-md-4 span{
-    font-size: 20px;
-    font-family: 'Saira', sans-serif;
-}
-.right-side .header input[type=text]{
-    border: none;
-    height: 30px;
-    border-radius: 5px;
-    padding-left: 20px;
-    width: 100%;
-    color: gray;
-}
-.right-side .home .content{
-    font-family: 'Saira', sans-serif;
-}
-.right-side .home .content ul{
-    list-style-type: none;
-}
-.right-side .home .content ul li{
-    width: 100%;
-    height: 73px;
-    padding-top: 15px;
-    border-bottom: 1px solid;
-}
-.right-side .home .content ul li:hover{
-    position:relative;
-    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-    -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-}
-.right-side .home .content ul .col-md-1{
-    padding: 0px;
-    padding-top: 5px;
-}
-.right-side .home .content ul .col-md-1 img{
-    float: right;
-}
-.right-side .home .content ul a{
-    color: white;
-    font-size: 16px;
-    text-decoration: none;
-}
-.right-side .home .content ul span{
-    font-size: 12px;
-    color: #BBBBBB;
-}
-.right-side .show-more{
     text-align: center;
-
+    padding: 25px 10px;
+    text-decoration: none;
+    height: 70px;
 }
-.article-content{
-    border-radius: 5px;
+.search li a:hover:not(.active) {
+    background-color: white;
+    color: #999999;
+}
+.search .active {
+    background-color: white;
+    color: #999999;
+}
+.search .input-group{
+    width: 300px;
+}
+.search .search-control{
+    float: right !important;
+    padding-right: 100px;
+    padding-top: 18px;
+}
+.search .notify{
+    background-color: red;
+    border-radius: 50%;
     padding: 5px;
-    color: white;
-    font-family: 'Saira', sans-serif;
 }
-.article-content .title{
-    width: 100%;
-    height: 75px;
+/*CONTENT*/
+/*HOME*/
+.content{
+    background-color: #f0f0f0;
+    padding-left: 10px;
+    padding-top: 50px;
 }
-.article-content .title .col-md-1{
-    padding: 0px;
-    padding-top: 10px;
+.content .home{
+    background-color: white;
+    height: 50px;
+    padding-left: 10px;
+    line-height: 50px;
+    margin-bottom: 20px;
+}
+.content .home .full-screen{
+    float: right;
+    margin-top: 15px;
+    margin-right: 15px;
+    cursor: pointer;
+}
+/*END HOME*/
+/*FEED*/
+.content ul{
+    list-style-type: none;
+    width:100%;
+    text-align:center;
+}
+.content .feeds{
+    margin-top: 50px;
+}
+.content .feeds .feed{
+    background-color: white;
+    padding: 10px 10px 10px 10px;
+}
+.content .feeds .li-feed{
+    margin-bottom: 20px;
+}
+.comments .avatar,
+.content .feeds .feed .user-info img{
+    vertical-align: middle;
+    height: 30px;
     width: 30px;
+    border-radius: 50%;
 }
-.article-content .title .col-md-1 img{
+.content .feeds .feed .user-info a,
+.comments a{
+    color: #03a9f4;
+}
+.content .feeds .feed .user-info .edit{
     float: right;
 }
-.article-content .title .col-md-10{
-    border-bottom: 1px solid white;
+.content .feeds .feed .feed-image{
+    width: 99%;
 }
-.article-content .title label{
-    font-size: 20px;
+.comments{
+    margin-top: 20px;
 }
-.article-content .title span{
-    color: #BBBBBB;
+.comments textarea{
+    width: 95%;
+    border-radius: 10px;
+    margin-left: 30px;
+        outline: none;
+    padding-left: 10px;
+    resize: none;
+    overflow: hidden;
+    min-height: 50px;
+    border: 1px solid #DDDDDD;
 }
-/* FOOTER */
-.footer{
+.comments .avatar-post{
+    vertical-align: middle;
+    height: 30px;
+    width: 30px !important;
+    border-radius: 50%;
+    position: absolute;
+}
+.comments button{
+    float: right;
+    margin-right: 15px;
+}
+.comments .comment{
+    background-color: #DDDDDD;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+.comments .col-md-1{
+    width: 6%;
+}
+.comments .reply{
+    float: right;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    margin-top: -20px;
+    color: blue;
+    cursor: pointer;
+}
+.comments .reply-input{
+    width: 96%;
+    margin: 20px 0px 20px 25px;
+}
+.comments .reply-btn{
+    margin-left: 30px;
+}
+.comments .show-reply{
+    margin-left: 55px;
+    color: #03a9f4;
+    cursor: pointer;
+}
+.comments .sub-comment{
+    margin-left: 50px;
+}
+.content .btn-new-topic {
+    height: 50px;
+    width: 100%;
+    padding-top: 10px;
+}
+.content .panel-title{
+    background-color: #03a9f4;
+    height: 50px;
+    color: white;
+    line-height: 50px;
+    text-align: center;
+}
+.content .panel-right-content{
+    background-color: white;
+    padding: 20px 0px 20px 50px;
+    margin-bottom: 20px;
+}
+.content .panel-right-content ul li{
+    margin-bottom: 20px;
+}
+.content .panel-right-content .red,
+.content .panel-right-content .yellow,
+.content .panel-right-content .green{
+    height: 10px;
+    width: 10px !important;
+    padding: 0px;
+    border-radius: 50%;
+    margin-top: 5px;
+}
+.content .panel-right-content .red{
+    background-color: red;
+}
+.content .panel-right-content .yellow{
     background-color: yellow;
 }
-/* COMMON */
-.remove-bottom-border{
-    border-bottom: none !important;
+.content .panel-right-content .green{
+    background-color: green;
 }
-#map{
-    height: 700px;
- }
-/* SPECIAL CSS */
-[ng\:cloak], [ng-cloak], .ng-cloak {
-    display: none !important;
+.panel-right-content ol, ul{
+    padding-left: 0;
+}
+.panel-right-content ol li{
+    color: #999999;
+    margin-bottom: 10px;
+}
+.panel-right-content ul li i{
+    float: right;
+    margin-right: 20px;
+}
+.panel-right-content ul li{
+    color: #999999;
+}
+.remove-space{
+    height: 20px;
+    width: 100%;
+}
+/* FORUM */
+.forum h4,
+.topic h4,
+.sub-topic h4{
+    background-color: #03A9F4;
+    height: 50px;
+    line-height: 50px;
+    padding-left: 10px;
+    color: white;
+}
+.forum h4 a,
+.topic h4 a{
+    color: white;
+}
+.forum .sub-topic,
+.topic .sub-topic{
+    background-color: white;
+    height: 50px;
+    line-height: 50px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+.forum .sub-topic .icon,
+.topic .sub-topic .icon{
+    background-image: url("../assets/chat-icon.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 50px;
+}
+.forum .sub-topic .title,
+.topic .sub-topic .title{
+    height: 20px;
+    margin-top: -10px;
+}
+.topic .sub-topic:hover{
+    background-color: #cccccc;
+}
+.forum .sub-topic:hover{
+    background-color: #cccccc;
+}
+/*FOOTER*/
+.footer{
+    background-color: #03a9f4;
+    height: 150px;
+    color: white;
+}
+.footer h3{
+    text-decoration: underline;
+}
+.footer a{
+    color: white;
+}
+.footer a:hover{
+    color: #0095D8;
+}
+.footer .author{
+    background-color: #0095D8;
+    text-align: center;
+    height: 50px;
+    line-height: 50px;
+}
+/* LOGIN - REGISTER*/
+#modal-login .modal-content,
+#modal-register .modal-content{
+    border-radius: 0px;
+    width: 80%;
+}
+#modal-login .modal-header,
+#modal-register .modal-header{
+    color: white;
+    background-color: #03a9f4;
+}
+#modal-login .modal-body input,
+#modal-register .modal-body input{
+    width: 100%;
+    height: 50px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid gray;
+    padding-left: 10px;
+    padding-top: 20px;
+    font-size: 25px;
+}
+#modal-login .modal-footer,
+#modal-register .modal-footer{
+    text-align: right;	
+}
+#modal-login .modal-footer .btn-info,
+#modal-register .modal-footer .btn-info{
+    width: 100px;
+    height: 40px;
+    border-radius: 0px;
+}
+#modal-login h5{
+    text-align: center;
+    margin-top: 10px;
+}
+/* SUB TOPIC */
+.sub-topic .content{
+    background-color: white;
+    padding: 10px;
+}
+/* ASSIGNMENT */
+.assignment{
+    margin-top: 50px;
+}
+.assignment h4{
+    border-bottom: 1px solid;
+    color: #BBBBBB;
+}
+.assignment p{
+    border-bottom: 1px solid #bbbbbb;
+    padding-bottom: 50px;
+}
+/* SETTING */
+.setting img{
+    height: 200px;
+    width: 90%;
+}
+.setting .key{
+    width: 20%
+}
+.setting .value{
+    width: 80%;
+}
+.setting table tr{
+    height: 50px;
+}
+/* ADD NEW FEED */
+.add-new-feed textarea{
+    width: 907px;
+    height: 58px;
+    border-radius: 3px;
+    padding-left: 10px;
+}
+.add-new-feed button{
+    margin-top: 20px;
+    float: right;
+}
+/* LEFT CONTENT */
+.left-side{
+    background-color: white;
+    height: 500px;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+.left-side ul li{
+    height: 50px;
+    border-bottom: 1px solid #DDDDDD;
+    width: 50%;
+    margin-left: 25%;
+    padding-top: 15px;
+}
+.left-side ul li:hover{
+    background-color: #DDDDDD;
+}
+/* CENTER CONTENT */
+.center-side {
+    -webkit-transition: width 2s; /* For Safari 3.1 to 6.0 */
+    transition: width 1s;
+}
+/* ABOUT */
+.about .left{
+    background-color: #307999;
+    border-left: 10px solid #1EAAF1;
+    padding-top: 20px;
+    text-align: center;
+    padding-bottom: 50px;
+        height: 875px;
+}
+.about .left img{
+    width: 285px;
+}
+.about .right{
+    background-color: #CCCCCC;
+    height: 875px;
+}
+.about .left .contact-title,
+.about .left .about-title{
+    margin-top: 9px;
+    text-align: center;
+    color: white;
+    background-color: #347998;
+    width: 35%;
+    position: absolute;
+    margin-left: 28%;
+}
+.about .left .about-title{
+    width: 55%;
+    margin-left: 19%;
+}
+.about .left a{
+    color: #333333;
+}
+.about .left h5{
+    border-bottom: 1px solid;
+    height: 30px;
+}
+.about .left .advisor-item{
+    height: 300px;
+    border: 1px solid white;
+    border-top: 10px solid white;
+    border-bottom: 10px solid white;
+}
+.advisor-item ul{
+    padding-top: 10px;
+    color: white;
+}
+.advisor-item ul li{
+    height: 30px;
+}
+.about .right .header{
+    background: black;
+    height: 30px;
+    color: white;
+    text-align: center;
+    line-height: 2;
+}
+/* PROGRAMMES */
+.programmes .people{
+    background-color:  #1EAAF1;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 50px;
+}
+.programmes .people .des{
+    width: 70%;
+    border-left: 5px double white;
+    padding-left: 10px;
+}
+.programmes .reason{
+    background-color: #00CCCC;
+    color: white;
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: 50px;
+}
+.programmes .reason .advantage{
+    width: 80%;
+    margin: auto;
+}
+.programmes .reason .advantage ul{
+    border-left: 10px solid;
+}
+.programmes .reason .advantage ul li{
+    margin-top: 50px;
+}
+.programmes .reason .advantage .round{
+    height: 50px;
+    background-color: white;
+    color: #21CCCB;
+    width: 50px;
+    border-radius: 50%;
+    margin-left: -30px;
+    margin-top: 10px;
+    font-size: 35px;
+}
+.programmes .process{
+    background-color: white;
+    color: #777777;
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: 50px;
+}
+a.adisabled {
+    cursor: not-allowed;
+    opacity: .65;
+}
+
+a.adisabled:hover { text-decoration: none; }
+a.adisabled:focus { text-decoration: none; }
+a.adisabled:active { text-decoration: none; }
+/*EXAMINATION*/
+.buttonStart{
+    margin-left: 50%;
+    width: 20%;	
+}
+
+    
+    #progressBar {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+    
+    }
+.k-drag-clue.k-state-selected, .k-draghandle.k-state-selected:hover, .k-ghost-splitbar-horizontal, .k-ghost-splitbar-vertical, .k-list>.k-state-highlight, .k-list>.k-state-selected, .k-marquee-color, .k-panel>.k-state-selected, .k-scheduler .k-scheduler-toolbar .k-state-selected, .k-scheduler .k-today.k-state-selected, .k-state-selected, .k-state-selected:link, .k-state-selected:visited {
+display: flex;
+justify-content: center;
+color: #ffc107;
+text-align: center;
+white-space: nowrap;
+background-color: #ffc107;
+transition: width .6s ease;
+background-image: linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
+    background-size: 1rem 1rem;
+
+    }
+/*END EXAMINATION*/
+/*NOTIFY*/
+.notify .title{
+    background-color: #03a9f4;
+    height: 45px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    padding-top: 10px;
+    padding-left: 10px;
+    border-bottom: 1px solid #cccccc;
+    color: white;
+}
+.notify img{
+    float: left;
+}
+.notify .title h3{
+    margin: 0;
+    margin-left: 35px;
+}
+.notify ul li{
+    padding-left: 42px;
+    padding-top: 10px;
+    border: 1px solid #CCCCCC;
+    border-top: none;
+    cursor: pointer;
+}
+.notify ul li:hover{
+    background-color: #cccccc;
+}
+.notify ul li div{
+    margin-left: 50px;
+}
+.notify ul li p,h5{
+    margin: 0px;
+}
+.notify ul li i{
+    font-size: 10px;
+}
+.notify .read{
+    background-color: white;
+}
+/* END NOTIFY */
+/* ADD NEW FEED */
+#modal-add-feed .modal-header{
+    background-color: #03a9f4;
+    color: white;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+#modal-add-feed .modal-body{
+    height: 380px;
+    padding: 0px;
+}
+#modal-add-feed .modal-body textarea{
+    width: 100%;
+    padding-left: 10px;
+}
+#modal-add-feed .modal-body{
+    overflow: scroll
+}
+#modal-add-feed .modal-footer .upload-image{
+    width: 50px;
+    height: 50px;
+    background-color: #AAAAAA;
+    border-radius: 50%;
+    margin-top: -10px;
+    padding-top: 8px;
+}
+#modal-add-feed .modal-footer .upload-image input[type="file"]{
+    opacity: 0;
+    z-index: -1;
+    margin-top: -40px;
+    height: 50px;
+    width: 50px;
+}
+#modal-add-feed .modal-footer .upload-image img{
+    margin-left: -5px;
+}
+#modal-add-feed .modal-footer .upload-image:hover{
+    background-color: #777777;
+}
+#modal-add-feed .modal-body img{
+    width: 100%;
+}
+/* END ADD NEW FEED */
+.wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.showmore{
+    background-color: #03a9f4;
+    color: white;
+    line-height: 25px;
+    text-align: center;
+    margin-top: 10px;
+    border: none;
+    border-radius: 5px;
+}
+/* CHAT */
+.chat{
+    background-color: white;
+}
+.chat ul li img{
+    width: 20px;
+}
+.chat ul li{
+    text-align: left;
+    padding-left: 10px;
+    padding-top: 5px;
 }
