--- a/hacker-monster/hm-rest/src/main/resources/static/css/style.css
+++ b/hacker-monster/hm-rest/src/main/resources/static/css/style.css
@@ -155,7 +155,7 @@ input:focus{
     height: 20px;
     width: 100%;
 }
-/*HOME*/
+/*MAIN-CONTENT*/
 .main-content{
     background-color: #f0f0f0;
     padding-left: 10px;
@@ -178,7 +178,6 @@ input:focus{
     margin-right: 15px;
     cursor: pointer;
 }
-/*END HOME*/
 /*FEED*/
 .home ul{
     list-style-type: none;
@@ -245,46 +244,6 @@ input:focus{
     border-radius: 5px;
     margin-bottom: 10px;
 }
-/* FORUM */
-.forum h4,
-.topic h4,
-.sub-topic h4{
-    background-color: #03A9F4;
-    height: 50px;
-    line-height: 50px;
-    padding-left: 10px;
-    color: white;
-}
-.forum h4 a,
-.topic h4 a{
-    color: white;
-}
-.forum .sub-topic,
-.topic .sub-topic{
-    background-color: white;
-    height: 50px;
-    line-height: 50px;
-    margin-bottom: 10px;
-    cursor: pointer;
-}
-.forum .sub-topic .icon,
-.topic .sub-topic .icon{
-    background-image: url("../assets/chat-icon.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 50px;
-}
-.forum .sub-topic .title,
-.topic .sub-topic .title{
-    height: 20px;
-    margin-top: -10px;
-}
-.topic .sub-topic:hover{
-    background-color: #cccccc;
-}
-.forum .sub-topic:hover{
-    background-color: #cccccc;
-}
 /*FOOTER*/
 .footer{
     background-color: #03a9f4;
@@ -305,54 +264,6 @@ input:focus{
     text-align: center;
     height: 50px;
     line-height: 50px;
-}
-/* LOGIN - REGISTER*/
-#modal-login .modal-content,
-#modal-register .modal-content{
-    border-radius: 0px;
-    width: 80%;
-}
-#modal-login .modal-header,
-#modal-register .modal-header{
-    color: white;
-    background-color: #03a9f4;
-}
-#modal-login .modal-body input,
-#modal-register .modal-body input{
-    width: 100%;
-    height: 50px;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-bottom: 1px solid gray;
-    padding-left: 10px;
-    padding-top: 20px;
-    font-size: 25px;
-}
-#modal-login .modal-footer,
-#modal-register .modal-footer{
-    text-align: right;	
-}
-#modal-login .modal-footer .btn-info,
-#modal-register .modal-footer .btn-info{
-    width: 100px;
-    height: 40px;
-    border-radius: 0px;
-}
-#modal-login h5{
-    text-align: center;
-    margin-top: 10px;
-}
-/* ADD NEW FEED */
-.add-new-feed textarea{
-    width: 907px;
-    height: 58px;
-    border-radius: 3px;
-    padding-left: 10px;
-}
-.add-new-feed button{
-    margin-top: 20px;
-    float: right;
 }
 /* LEFT CONTENT */
 .left-side{
@@ -377,228 +288,6 @@ input:focus{
     -webkit-transition: width 2s; /* For Safari 3.1 to 6.0 */
     transition: width 1s;
 }
-/* ABOUT */
-.about .left{
-    background-color: #307999;
-    border-left: 10px solid #1EAAF1;
-    padding-top: 20px;
-    text-align: center;
-    padding-bottom: 50px;
-        height: 875px;
-}
-.about .left img{
-    width: 285px;
-}
-.about .right{
-    background-color: #CCCCCC;
-    height: 875px;
-}
-.about .left .contact-title,
-.about .left .about-title{
-    margin-top: 9px;
-    text-align: center;
-    color: white;
-    background-color: #347998;
-    width: 35%;
-    position: absolute;
-    margin-left: 28%;
-}
-.about .left .about-title{
-    width: 55%;
-    margin-left: 19%;
-}
-.about .left a{
-    color: #333333;
-}
-.about .left h5{
-    border-bottom: 1px solid;
-    height: 30px;
-}
-.about .left .advisor-item{
-    height: 300px;
-    border: 1px solid white;
-    border-top: 10px solid white;
-    border-bottom: 10px solid white;
-}
-.advisor-item ul{
-    padding-top: 10px;
-    color: white;
-}
-.advisor-item ul li{
-    height: 30px;
-}
-.about .right .header{
-    background: black;
-    height: 30px;
-    color: white;
-    text-align: center;
-    line-height: 2;
-}
-/* PROGRAMMES */
-.programmes .people{
-    background-color:  #1EAAF1;
-    color: white;
-    padding: 10px;
-    border-radius: 10px;
-    margin-bottom: 50px;
-}
-.programmes .people .des{
-    width: 70%;
-    border-left: 5px double white;
-    padding-left: 10px;
-}
-.programmes .reason{
-    background-color: #00CCCC;
-    color: white;
-    border-radius: 10px;
-    padding: 10px;
-    margin-bottom: 50px;
-}
-.programmes .reason .advantage{
-    width: 80%;
-    margin: auto;
-}
-.programmes .reason .advantage ul{
-    border-left: 10px solid;
-}
-.programmes .reason .advantage ul li{
-    margin-top: 50px;
-}
-.programmes .reason .advantage .round{
-    height: 50px;
-    background-color: white;
-    color: #21CCCB;
-    width: 50px;
-    border-radius: 50%;
-    margin-left: -30px;
-    margin-top: 10px;
-    font-size: 35px;
-}
-.programmes .process{
-    background-color: white;
-    color: #777777;
-    border-radius: 10px;
-    padding: 10px;
-    margin-bottom: 50px;
-}
-a.adisabled {
-    cursor: not-allowed;
-    opacity: .65;
-}
-
-a.adisabled:hover { text-decoration: none; }
-a.adisabled:focus { text-decoration: none; }
-a.adisabled:active { text-decoration: none; }
-/*EXAMINATION*/
-.buttonStart{
-    margin-left: 50%;
-    width: 20%;	
-}
-
-    
-    #progressBar {
-    display: block;
-    width: 100%;
-    margin-bottom: 10px;
-    
-    }
-.k-drag-clue.k-state-selected, .k-draghandle.k-state-selected:hover, .k-ghost-splitbar-horizontal, .k-ghost-splitbar-vertical, .k-list>.k-state-highlight, .k-list>.k-state-selected, .k-marquee-color, .k-panel>.k-state-selected, .k-scheduler .k-scheduler-toolbar .k-state-selected, .k-scheduler .k-today.k-state-selected, .k-state-selected, .k-state-selected:link, .k-state-selected:visited {
-display: flex;
-justify-content: center;
-color: #ffc107;
-text-align: center;
-white-space: nowrap;
-background-color: #ffc107;
-transition: width .6s ease;
-background-image: linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
-    background-size: 1rem 1rem;
-
-    }
-/*END EXAMINATION*/
-/*NOTIFY*/
-.notify .title{
-    background-color: #03a9f4;
-    height: 45px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    padding-top: 10px;
-    padding-left: 10px;
-    border-bottom: 1px solid #cccccc;
-    color: white;
-}
-.notify img{
-    float: left;
-}
-.notify .title h3{
-    margin: 0;
-    margin-left: 35px;
-}
-.notify ul li{
-    padding-left: 42px;
-    padding-top: 10px;
-    border: 1px solid #CCCCCC;
-    border-top: none;
-    cursor: pointer;
-}
-.notify ul li:hover{
-    background-color: #cccccc;
-}
-.notify ul li div{
-    margin-left: 50px;
-}
-.notify ul li p,h5{
-    margin: 0px;
-}
-.notify ul li i{
-    font-size: 10px;
-}
-.notify .read{
-    background-color: white;
-}
-/* END NOTIFY */
-/* ADD NEW FEED */
-#modal-add-feed .modal-header{
-    background-color: #03a9f4;
-    color: white;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-}
-#modal-add-feed .modal-body{
-    height: 380px;
-    padding: 0px;
-}
-#modal-add-feed .modal-body textarea{
-    width: 100%;
-    padding-left: 10px;
-}
-#modal-add-feed .modal-body{
-    overflow: scroll
-}
-#modal-add-feed .modal-footer .upload-image{
-    width: 50px;
-    height: 50px;
-    background-color: #AAAAAA;
-    border-radius: 50%;
-    margin-top: -10px;
-    padding-top: 8px;
-}
-#modal-add-feed .modal-footer .upload-image input[type="file"]{
-    opacity: 0;
-    z-index: -1;
-    margin-top: -40px;
-    height: 50px;
-    width: 50px;
-}
-#modal-add-feed .modal-footer .upload-image img{
-    margin-left: -5px;
-}
-#modal-add-feed .modal-footer .upload-image:hover{
-    background-color: #777777;
-}
-#modal-add-feed .modal-body img{
-    width: 100%;
-}
-/* END ADD NEW FEED */
 .show-more{
     margin-bottom: 10px;
     text-align: center;
@@ -614,4 +303,6 @@ background-image: linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25
     text-align: left;
     padding-left: 10px;
     padding-top: 5px;
+    height: 35px;
+    border-bottom: 1px solid #dddddd;
 }
