--- a/hacker-monster/hm-rest/src/main/resources/static/css/style.css
+++ b/hacker-monster/hm-rest/src/main/resources/static/css/style.css
@@ -328,3 +328,46 @@ input:focus{
 .topic ul li:hover{
     background-color: #dddddd;
 }
+/* ARTICLE */
+.article{
+    background-color: white;
+    -webkit-box-shadow: -5px 8px 15px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: -5px 8px 15px 0px rgba(0,0,0,0.75);
+    box-shadow: -5px 8px 15px 0px rgba(0,0,0,0.75);
+    border-radius: 5px;
+    padding: 10px;
+}
+.article .article-header{
+    color: #aaaaaa;
+}
+.article .article-description{
+    border-top: 1px solid;
+    margin-top: 10px;
+    padding-top: 10px;
+}
+/* MODAL */
+.modal-header{
+    background-color: #03A9F4;
+    color: white;
+    text-align: center;
+}
+.modal-body input{
+    display: inline;
+}
+.modal-body input[type=password],
+.modal-body input[type=text]{
+    border: 1px solid #aaaaaa !important;
+    height: 45px;
+    width: 100%;
+    border-radius: 5px;
+    padding-left: 10px;
+}
+.modal-content{
+    width: 60%;
+}
+.modal-footer{
+    text-align: center;
+}
+.modal-footer button{
+    width: 70%;
+}
