--- a/hacker-monster/hm-rest/src/main/resources/static/css/style.css
+++ b/hacker-monster/hm-rest/src/main/resources/static/css/style.css
@@ -246,6 +246,9 @@ input:focus{
     border: 1px solid #DDDDDD;
     padding-left: 5px;
 }
+.home .feed .comment-box button{
+    margin-top: 10px;
+}
 .home .feed .comments{
     padding-bottom: 5px;
 }
@@ -258,7 +261,6 @@ input:focus{
 /*FOOTER*/
 .footer{
     background-color: #03a9f4;
-    height: 150px;
     color: white;
 }
 .footer h3{
@@ -306,6 +308,12 @@ input:focus{
 /* CHAT */
 .chat{
     background-color: white;
+    overflow: auto;
+    position: fixed;
+    right: 10%;
+    bottom: 0;
+    top: 500px;
+    width: 12%;
 }
 .chat ul li img{
     width: 20px;
